[gd_scene load_steps=12 format=3 uid="uid://1jylhdkewo5k"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1_65v6o"]
[ext_resource type="FontFile" uid="uid://qkke0n4qf5vs" path="res://assets/Chicago.ttf" id="2_7w7ua"]
[ext_resource type="Script" uid="uid://bd7olnjl4dfv4" path="res://scripts/broke_rage.gd" id="3_r65a5"]
[ext_resource type="Texture2D" uid="uid://bexdrhb3xo3ro" path="res://assets/redarrow.png" id="4_2fs5y"]
[ext_resource type="Script" uid="uid://bq3i6eu2isf1d" path="res://scripts/stock_market.gd" id="4_e7xr8"]
[ext_resource type="Script" uid="uid://prlirycaaf1k" path="res://resources/stocks/stock.gd" id="5_fds7a"]
[ext_resource type="Resource" uid="uid://hpmpyxom1uik" path="res://resources/stocks/tsla_stock.tres" id="6_rx4u4"]
[ext_resource type="Resource" uid="uid://ddsoa3sffia8j" path="res://resources/stocks/gme_stock.tres" id="7_cdyoq"]
[ext_resource type="PackedScene" uid="uid://m61kgxdhy7hc" path="res://stock_row.tscn" id="8_4dioc"]
[ext_resource type="Texture2D" uid="uid://b8cd5rom7n7tl" path="res://assets/sigma.png" id="9_slghq"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_o42ww"]

[node name="BrokeRageWindow" type="Window"]
auto_translate_mode = 1
title = "BrokeRage"
initial_position = 2
size = Vector2i(400, 300)
visible = false
theme = ExtResource("1_65v6o")
theme_override_fonts/title_font = ExtResource("2_7w7ua")
script = ExtResource("3_r65a5")
id = "brokerage"
icon = ExtResource("4_2fs5y")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
current_tab = 1
tab_focus_mode = 0

[node name="Summary" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
metadata/_tab_index = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/TabContainer/Summary"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_o42ww")
expand_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/TabContainer/Summary"]
layout_mode = 2
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Summary"]
layout_mode = 2

[node name="BalanceLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Summary/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_65v6o")
text = "Balance: $ "
horizontal_alignment = 2

[node name="CashLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Summary/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_65v6o")
theme_override_font_sizes/font_size = 21
text = "Cash: $ "
horizontal_alignment = 2

[node name="InvestedLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Summary/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_65v6o")
text = "Invested: $ "
horizontal_alignment = 2

[node name="DebtLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Summary/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_65v6o")
text = "Debt: $ "
horizontal_alignment = 2

[node name="PassiveIncomeLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Summary/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_65v6o")
text = "Passive Income: $0"
horizontal_alignment = 2

[node name="StockMarket" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 5
script = ExtResource("4_e7xr8")
stock_list = Array[ExtResource("5_fds7a")]([ExtResource("6_rx4u4"), ExtResource("7_cdyoq")])
stock_row_scene = ExtResource("8_4dioc")
metadata/_tab_index = 1

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/TabContainer/StockMarket"]
autostart = true

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/TabContainer/StockMarket"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="StocksButton" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_65v6o")
text = "Stocks"
icon = ExtResource("9_slghq")

[connection signal="timeout" from="MarginContainer/VBoxContainer/TabContainer/StockMarket/Timer" to="MarginContainer/VBoxContainer/TabContainer/StockMarket" method="_on_timer_timeout"]
